# webrtc_py

libcamera-webrtc-foxglove/: README.md  requirements.txt
libcamera-webrtc-foxglove/src/: main.py  package.xml  setup.py  webrtc.py
libcamera-webrtc-foxglove/src/launch/: raspicam_webrtc_launch.py
libcamera-webrtc-foxglove/src/rtc_py_demo/: rtc_py_demo.py
libcamera-webrtc-foxglove/src/temp-folder/: camera.py
